# testrep0

./: .bandit  README.md  pyproject.toml
.github/workflows/: merge-checks.yml
.trunk/: trunk.yaml
scripts/: gen-pr.sh  gen-prs.sh  merge-prs.sh
src/testrep0/: __init__.py
tests/: test_range.py
