[project]
name = "testrep0"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Matt White", email = "mail@matt-w.net" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest>=8.0.2"]

[tool.hatch.metadata]
allow-direct-references = true
